# testingOutCodespaces

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
basicFreeGLUT/: CMakeLists.txt  Cube.cpp  GLM.h  OpenGLHelperMethods.cpp  OpenGLHelperMethods.h  main.cpp  main.h  shader.frag  shader.vert
basicFreeGLUT/res/3D_pattern_58/pattern_290/: diffuse.tga  normal.tga  specular.tga
basicFreeGLUT/res/3D_pattern_58/pattern_291/: diffuse.tga  specular.tga
basicFreeGLUT/res/3D_pattern_58/pattern_292/: normal.tga
basicFreeGLUT/res/3D_pattern_58/pattern_293/: normal.tga
basicFreeGLUT/res/3D_pattern_58/pattern_294/: diffuse.tga  normal.tga
basicFreeGLUT/res/icon/: programIcon.rc
basicGLFW/: CMakeLists.txt  Cube.h  GLM.cpp  GLM.h  OpenGLHelperMethods.cpp  OpenGLHelperMethods.h  main.cpp  main.h
basicGLFW/res/3D_pattern_58/pattern_291/: normal.tga
basicGLFW/res/3D_pattern_58/pattern_292/: diffuse.tga  specular.tga
basicGLFW/res/3D_pattern_58/pattern_293/: diffuse.tga  specular.tga
basicGLFW/res/3D_pattern_58/pattern_294/: specular.tga
basicGLFW/res/icon/: programIcon.rc
